# geometry-Opasd

./: .gitignore  CMakeLists.txt  Makefile  geometry  input.txt.txt  main.c
.github/workflows/: cmake.yml
lib/: Library.cpp  Library.h
src/: geometry.cpp  main.c
src/lib/: figure.cpp  figure.h
tests/: GeomTests.cpp  GeomTests.h
